--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -5,3 +5,14 @@ h2.title
     font-weight bold
     letter-spacing 0.7px
     color #000
+
+
+.text_default
+    font-family $ProximaNovaFont
+    font-size 16px
+    font-weight normal
+    font-style normal
+    font-stretch normal
+    line-height normal
+    letter-spacing 0.4px
+    color #000
