--- a/assets/styles/variables.styl
+++ b/assets/styles/variables.styl
@@ -1,4 +1,5 @@
 ContainersWidth = 80%
-$FuturaFont = Futura
-$LucidaGrandeFont = LucidaGrande
-$ProximaNovaFont = ProximaNova
+$defaultFonts = Arial, sans-serif
+$FuturaFont = FuturaFont, $defaultFonts
+$LucidaGrandeFont = LucidaGrande, $defaultFonts
+$ProximaNovaFont = ProximaNova, $defaultFonts
