--- a/assets/styles/variables.styl
+++ b/assets/styles/variables.styl
@@ -1,4 +1,5 @@
-ContainersWidth = 80%
+$ContainersWidth = 80%
+$ContainersWidthMobile = 100%
 $defaultFonts = Arial, sans-serif
 $FuturaFont = FuturaFont, $defaultFonts
 $LucidaGrandeFont = LucidaGrande, $defaultFonts
