--- a/assets/styles/variables.styl
+++ b/assets/styles/variables.styl
@@ -1,5 +1,7 @@
 $ContainersWidth = 80%
 $ContainersWidthMobile = 100%
+$PaddingContainers = 60px
+$PaddingContainersMobile = 30px
 $defaultFonts = Arial, sans-serif
 $FuturaFont = FuturaFont, $defaultFonts
 $LucidaGrandeFont = LucidaGrande, $defaultFonts
