--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -1,6 +1,6 @@
 h1.title
     font-family $FuturaFont
-    font-size 61px
+    font-size 53px
     color whiteMain
     text-align center
     font-weight bold
@@ -12,13 +12,13 @@ h1.title
 h2.title
     text-align center
     font-family $FuturaFont
-    font-size 33px
+    font-size 28px
     font-weight bold
     color #000
 
 h3.title
     font-family $FuturaFont
-    font-size 20px
+    font-size 18px
     font-weight bold
     letter-spacing 0.4px
     color #000
@@ -46,5 +46,9 @@ h3.title
 @media only screen and (max-width 450px)
     h1.title
         font-size 40px
+
+@media only screen and (max-width 450px)
+    h1.title
+        font-size 34px
 
 
