--- a/assets/styles/variables.styl
+++ b/assets/styles/variables.styl
@@ -6,3 +6,8 @@ $defaultFonts = Arial, sans-serif
 $FuturaFont = FuturaFont, $defaultFonts
 $LucidaGrandeFont = LucidaGrande, $defaultFonts
 $ProximaNovaFont = ProximaNova, $defaultFonts
+
+$FontSize3 = 18px
+$FontSizeMenu = 13px
+$FontSizeMenuMobile = 15px
+$FontSize16 =16px
