--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -33,6 +33,15 @@ h3.title
     letter-spacing 0.4px
     color #000
 
+.text_default-white
+    font-family $ProximaNovaFont
+    font-size 16px
+    font-weight normal
+    font-style normal
+    font-stretch normal
+    line-height normal
+    letter-spacing 0.4px
+    color whiteMain
 
 @media only screen and (max-width 767px)
     h1.title
