add and edit crews block

--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -60,4 +60,10 @@ h3.title
     h1.title
         font-size 34px
 
+@media only screen and (max-width 350px)
+    h3.title
+        font-size 16px
+
+
+
 
