--- a/assets/styles/global.styl
+++ b/assets/styles/global.styl
@@ -59,6 +59,8 @@ h3.title
 @media only screen and (max-width 450px)
     h1.title
         font-size 34px
+    h3.title
+        font-size 17px
 
 @media only screen and (max-width 350px)
     h3.title
